<resources>
    <string name="app_name">UIcLass</string>
    <string name="first_name">Enter your first name</string>
    <string name="last_name">Enter your last name</string>
    <string name="phone">Enter your phone number</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>

    <string-array name="gender">
        <item> select your gender</item>
        <item> Male</item>
        <item> Female</item>
    </string-array>

    <string-array name="state">
        <item> select your state</item>
        <item> Abia</item>
        <item> Anambra</item>
        <item> Kano</item>
        <item> Kogi</item>
    </string-array>
</resources>
